8256722: handle VC++:1927 VS2019 in  abstract_vm_version